--- a/papers/thesis/thesis.tex
+++ b/papers/thesis/thesis.tex
@@ -218,6 +218,7 @@ Dedication TBD
 \addpart{Class Options, Commands and Environments}
 \pagelayout{margin} % Restore margins
 
+\input{chapters/trace_driven_sim.tex}
 \input{chapters/options.tex}
 \input{chapters/textnotes.tex}
 \input{chapters/figsntabs.tex}
